# organa-backend

./: .env.example  Cargo.toml  README.md  cookies.txt  docker-compose.yml
migrations/: 20260128042827_initial_schema.sql  20260128102949_add_default_uuid_to_users.sql  20260131024442_create_refresh_tokens_table.sql
src/: main.rs
src/config/: env.rs
src/db/: mod.rs
src/domain/: refresh_token.rs  user.rs
src/http/: mod.rs  routes.rs
src/http/auth/: dto.rs  handlers.rs
src/http/cookies/: mod.rs  refresh_cookie.rs
src/http/handlers/: health.rs
src/repositories/: mod.rs  refresh_token_repository.rs  user_repository.rs
src/services/auth/: auth_service.rs  mod.rs
src/shared/: app_state.rs  crypto.rs  jwt.rs  mod.rs  refresh_token.rs
