[package]
name = "organa-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = [ "json", "macros" ] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "time"
] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
argon2 = "0.5"

# Auth / Security
jsonwebtoken = "9"
rand = "0.8"
sha2 = "0.10"